
[workspace]
resolver = "2"
members = ["hello-texture", "hello-triangle", "hello-window"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
winit = "0.30"
wgpu = "22.1"
pollster = "0.3"
log = "0.4"
env_logger = "0.11"
bytemuck = { version = "1.19", features = ["derive"] }
anyhow = "1.0"

[workspace.dependencies.image]
version = "0.25"
default-features = false
features = ["jpeg", "png"]
